Product - CRUD & Swagger & Tests
